--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,14 +23,11 @@ jobs:
         with:
           go-version: 1.21  # Replace with your preferred Go version
 
-      # Step 3: Install GoReleaser
-      - name: Install GoReleaser
-        run: |
-          curl -sL https://install.goreleaser.com/github.com/goreleaser/goreleaser.sh | bash
-
-      # Step 4: Run GoReleaser
+      # Step 3: Run GoReleaser using the official action
       - name: Run GoReleaser
-        run: goreleaser release --clean
+        uses: goreleaser/goreleaser-action@v4
+        with:
+          args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
